* 2014-01-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 30384: Don't distribute non-common events, don't distribute events received via external mail notification   
 - Fix for bug 28479: Invalidate folder cache on subscription status changes   

* 2014-01-29 - thorben.betten@open-xchange.com

 - Fix for bug 30626: Signal special "Collected addresses" folder as a default folder

* 2014-01-28 - jan.bauerdick@open-xchange.com

 - Fix for bug 30609: Rename XING.yml to xing.yml to restore previous deleted file

* 2014-01-27 - thorben.betten@open-xchange.com

 - Fix for bug 30418: Added EN_GB section for standard mail folder names in AdminUser.properties

* 2014-01-26 - thorben.betten@open-xchange.com

 - Fix for bug 30820: Enhanced HTML detector by JavaScript event handler names
                      (as listed by http://de.selfhtml.org/javascript/sprache/eventhandler.htm )

* 2014-01-24 - tobias.friedrich@open-xchange.com

 - Fix for bug 30692: Preserve previous filename unless explicitly set when creating a new file version   

* 2014-01-23 - tobias.friedrich@open-xchange.com

 - Fix for bug 30777: Use relative identifier when retrieving metadata from ID based file access  

* 2014-01-22 - tobias.friedrich@open-xchange.com

 - Fix for bug 30747: Don't preserve creation timestamp of source file when copying infostore files  

* 2014-01-22 - thorben.betten@open-xchange.com

 - Fix for bug 29367: Filter already contained messages from E-Mail conversation thread

* 2014-01-21 - marc.arens@open-xchange.com

 - Fix for bug 30737: Proper null check and test case

* 2014-01-21 - martin.herfurth@open-xchange.com

 - Fix for bug 30738: Avoid NPE.

* 2014-01-21 - thorben.betten@open-xchange.com

 - Second fix for bug 30684: Ensure IMAP-IDLE push listener is gracefully shut-down on permanent authentication failures
 - Fix for bug 30739: Added null guard to avoid NPE and enhanced affected routine by some logging to detect what went wrong